--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "less": "^2.7.3",
-    "less-loader": "^5.0.0",
     "lib-flexible": "^0.3.2",
+    "postcss-px2rem-exclude": "^0.0.6",
     "style-resources-loader": "^1.3.3",
+    "vant": "^2.5.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
@@ -25,8 +25,12 @@
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "px2rem-loader": "^0.1.9",
     "style-resources-loader": "^1.3.2",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-template-compiler": "^2.6.11"
