--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "lib-flexible": "^0.3.2",
+    "loaders.css": "^0.1.2",
     "postcss-px2rem-exclude": "^0.0.6",
     "style-resources-loader": "^1.3.3",
     "vant": "^2.5.3",
