--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss-px2rem-exclude": "^0.0.6",
     "style-resources-loader": "^1.3.3",
     "vant": "^2.5.3",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
